--- a/app-ws-whisper/src/main/resources/application.properties
+++ b/app-ws-whisper/src/main/resources/application.properties
@@ -1,8 +1,18 @@
+## datasource h2
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=
+
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
+spring.datasource.platform==h2
+
+## initialization scripts
+spring.sql.init.schema-locations=classpath:sql/script_whisper-ddl-h2.sql
+spring.sql.init.data-locations=classpath:sql/script_whisper-dml-h2.sql
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
+#spring.sql.init.continue-on-error=true
